--- a/templates/_base.html
+++ b/templates/_base.html
@@ -26,11 +26,11 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'about' %}">Marca</a>
+                        <a class="nav-link" href="{% url 'brand' %}">Marca</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="{% url 'shoe_list' %}">Zapatos</a>
-                    </li>
+                    </li> -->
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <form method="post" action="{% url 'logout' %}">
